# my-redis

./: .gitignore  Cargo.toml  README.md  bar.txt  bar2.txt  bar3.txt  foo.txt
src/client/: main.rs
src/server/: main.rs
