[package]
name = "my-redis"
version = "0.1.0"
authors = ["tly"]
edition = "2018"
default-run ="mini-tokio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
mini-redis = "0.4"
bytes = "1"
crossbeam = "0.8"
futures = "0.3"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
